<resources>
    <string name="app_name">doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_doctor_info">အချက်အလက်များဖြည့်ပါ</string>
    <string name="txt_name">အမည်</string>
    <string name="txt_alleg_medicine">မတည့်သောဆေး</string>
    <string name="txt_blood_type">သွေးအုပ်စုအမျိုးအစား</string>
    <string name="txt_height">အရပ်</string>
    <string name="txt_bd">မွေးနေ့</string>
    <string name="txt_weigh">ခန္ဂာကိုယ်အလေးချိန်</string>
    <string name="txt_blood_pressure">သွေးပေါင်ချိန်</string>



    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="years">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="gentle">
        <item>အမျိုးသား</item>
        <item>အမျိုးသမီး</item>
    </string-array>


    <string-array name="specialities">
        <item>ဦးနှောက်အာရုံကြောအထူးကု</item>
        <item>အစာအိမ်နဲ့အူလမ်းကြောင်း</item>
        <item>နှလုံးအထူးကု</item>
        <item>သွေးရောဂါအထူးကု</item>
        <item>အမျိုးသမီးကျန်မာရေး</item>
        <item>အလှအပရေးရာ</item>
        <item>အရေပြားအထူးကု</item>
        <item>အရိုးအကြော</item>
        <item>စိတ်ကျန်းမာရေးအထူးကု</item>
        <item>အသည်းနဲ့ သည်းခြေလမ်းကြောင်းခွဲစိတ်</item>
        <item>အလှအပရေးရာ</item>
        <item>ဦးနှောက်အာရုံကြောအထူးကု</item>
        <item>အစာအိမ်နဲ့ အူလမ်းကြောင်း</item>
        <item>သွားဘက်ဆိုင်ရာ</item>
        <item>မျက်စိကျန်းမာရေး</item>
        <item>နားနှာခေါင်းလည်ချောင်းအထူးကု</item>
        <item>အထွေအထွေအထူးကု</item>
        <item>အာဟာရဆိုင်ရာ</item>
    </string-array>

    <string-array name="medicine_date">
        <item> Days</item>
        <item> Week </item>
    </string-array>


</resources>