<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f6f6f6"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar.TitleText"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="လူနာအချက်အလက်" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="12dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPatientPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="17dp"
                android:src="@drawable/no_path"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/pNameQauestionINSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="လူနာအမည်" />

                <TextView
                    android:id="@+id/pNameInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="aung aung" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvbirthdayQuestionInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="@string/txt_bd" />

                <TextView
                    android:id="@+id/tvbdAnswerInSecond"
                   style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="aung aung" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvheightQuestionInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="@string/txt_height" />

                <TextView
                    android:id="@+id/etheigtAnswerInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="aung aung" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvbloodTypeQuestionInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="@string/txt_blood_type" />

                <TextView
                    android:id="@+id/etbloodTypeAnswerInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_small"
                    android:text="aung aung" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvWrngQuestionInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:text="@string/txt_alleg_medicine" />

                <TextView
                    android:id="@+id/etwrongInSecond"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="aung aung" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvWeight"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:text="@string/txt_weigh" />

                <TextView
                    android:id="@+id/etWeight"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="aung aung" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvBloodPressure"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:text="@string/txt_blood_pressure" />

                <TextView
                    android:id="@+id/etBloodPressure"
                    style="@style/textDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="aung aung" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <org.mmtextview.components.MMTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="3sp"
        android:layout_marginStart="20dp"
        android:text="ရောဂါဆိုင်ရာမေးခွန်းများ"
        android:textColor="#414141"
        android:textSize="16sp"
        android:textStyle="normal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSpeicalQuestionAndAnswerInConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        />


</LinearLayout>